# thesis_tracking

./: .gitignore
acorn/: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  check_acorn.py  pyproject.toml  requirements-cpu.txt  requirements.txt
acorn/.gitlab/pipelines/: .build-gitlab-ci.yaml  .test-gitlab-ci-dind.yaml  .test-gitlab-ci.yaml
acorn/acorn/core/: core_utils.py  eval_stage.py  infer_stage.py  throughput.py  train_stage.py
acorn/acorn/utils/: eval_utils.py  loading_utils.py  mapping_utils.py
acorn/examples/ACAT_2025/: README.md  data_reader.yaml  double_metric_learning_eval.yaml  double_metric_learning_infer.yaml  double_metric_learning_train.yaml  gfilter_eval.yaml  gfilter_infer.yaml  gfilter_train.yaml  gnn_eval.yaml  gnn_infer.yaml  gnn_train.yaml  metric_learning_eval.yaml  metric_learning_infer.yaml  metric_learning_train.yaml  track_building_eval.yaml  track_building_infer.yaml
acorn/examples/CTD23_new_naming_scheme/: README.md  gnn_eval.yaml  gnn_infer.yaml  gnn_train.yaml  module_map_eval.yaml  module_map_infer.yaml  track_building_eval.yaml  track_building_infer.yaml
acorn/examples/Example_1/: gnn_train.yaml  track_building_eval.yaml
acorn/examples/Example_2/: README.md  gnn_train.yaml  metric_learning_train.yaml  track_building_eval.yaml  track_building_fastwalkthrough_infer.yaml
acorn/examples/Example_3/: gnn_train.yaml  metric_learning_train.yaml  track_building_eval.yaml
acorn/examples/Example_region/: data_reader.yaml
acorn/model_store/: MODEL_CARDS.md  README.md
acorn/tests/: run_test.sh  run_test_gpu.sh
(+383 files in other folders)
