[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acorn"
version = "2.0.1"
description = "A common framework for GNN4ITK"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache License, Version 2.0" }
authors = [{ name = "GNN4ITK Team", email = "atlas-sw-gnn-tracking@cern.ch" }]
keywords = ["ATLAS", "track reconstruction", "graph networks", "machine learning"]

[project.urls]
Homepage = "https://gitlab.cern.ch/gnn4itkteam/acorn"

[project.scripts]
g4i-train = "acorn.core.train_stage:main"
g4i-infer = "acorn.core.infer_stage:main"
g4i-eval = "acorn.core.eval_stage:main"
acorn = "acorn.core.entrypoint_stage:cli"

[tool.setuptools.packages.find]
include = ["acorn", "acorn.*"]

[tool.black]
line-length = 88
exclude = '(\.git|\.tox|\.venv|_build|build|dist|acorn\.egg-info|\.venv|docs|functorch)'
